fixed page.module.css - fixed breakpoints for main || fixed user-gallery.scss - fixed breakpoints for grid

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -209,6 +209,16 @@
   .grid {
     grid-template-columns: repeat(2, 50%);
   }
+  .main{
+    padding: 1rem;
+  }
+  /* Adjusted Padding for tablet view */
+}
+@media (max-width: 701px) {
+  .main{
+    padding: 0.5rem;
+  }
+  /* Adjusted Padding for mobile view */
 }
 
 @media (prefers-color-scheme: dark) {
