--- a/app/css/user-gallery.scss
+++ b/app/css/user-gallery.scss
@@ -7,9 +7,18 @@
     grid-template-rows: auto;
     grid-gap: 16px;
 
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
     }
+    // Adjusted grid for mobile view
+    @media screen and (min-width: 768px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    // Adjusted grid for tablet view
+    @media screen and (min-width: 900.1px) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    // Adjusted grid for laptop view
   }
 
   > .heading + .items {
